# ADS_Exp9

./: README.md
backend/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/mnist/: model.py  train.py
backend/spam_ham/: model.py  train.py
frontend/: README.md  package.json
frontend/app/: page.tsx
frontend/app/mnist/: page.tsx
frontend/app/spam-detection/: page.tsx
frontend/components/: DrawingCanvas.tsx
